# Umol

./: .gitignore  README.md  Umol.ipynb  install_dependencies.sh  predict.sh  pyproject.toml  run_my_Umol.sh  test.sh
src/: predict.py
src/relax/: add_plddt_to_relaxed.py  align_ligand_conformer.py  openmm_relax.py
umol/: inference.py  make_ligand_feats.py  make_msa_seq_feats.py  make_msa_seq_feats_colab.py  make_targetpost_npy.py  predict.py  predict_colab.py
umol/config/: umol.yaml
umol/net/: __init__.py
umol/net/common/: protein.py
umol/net/data/tools/: hhblits.py  utils.py
umol/net/model/: all_atom.py  config.py  data.py  features.py  folding.py  model.py  modules.py  r3.py
umol/net/model/tf/: data_transforms.py  input_pipeline.py  protein_features.py  protein_features_test.py  proteins_dataset.py  shape_helpers_test.py
umol/relax/: add_plddt_to_relaxed.py  align_ligand_conformer.py  openmm_relax.py
